plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.5.14'
  id 'org.owasp.dependencycheck' version '12.2.0'
  id 'uk.gov.hmcts.java' version '0.12.70'
  id 'com.github.ben-manes.versions' version '0.51.0'
  id 'io.freefair.lombok' version '9.2.0'
  id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
}

apply plugin: 'java'
apply plugin: 'project-report'
apply plugin: 'idea'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}
sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output + test.output
      runtimeClasspath += main.output + test.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += [
    '-parameters',
    '-Xlint:unchecked',
    '-Werror'
  ]
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

tasks.withType(Copy).configureEach {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('functional', Test) {
  description = "Runs functional tests"
  group = "Verification"
  systemProperty "scenario", System.getProperty('scenario')
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  finalizedBy aggregate
  testLogging.showStandardStreams = true
}

checkstyle {
  maxWarnings = 0
  toolVersion = '13.4.2'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
  toolVersion = "7.14.0"
  sourceSets = [sourceSets.main, sourceSets.functionalTest]
  reportsDir = file("${project.getLayout().getBuildDirectory()}/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}

dependencyManagement {
  imports {
    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.2'
    mavenBom 'com.fasterxml.jackson:jackson-bom:2.21.2'
    mavenBom "net.serenity-bdd:serenity-bom:5.3.10"
  }

  dependencies {
    dependencySet(group: 'org.junit.jupiter', version: '5.13.4') {
      entry 'junit-jupiter'
      entry 'junit-jupiter-api'
      entry 'junit-jupiter-engine'
      entry 'junit-jupiter-params'
    }

    dependencySet(group: 'org.junit.platform', version: '1.13.4') {
      entry 'junit-platform-commons'
      entry 'junit-platform-engine'
      entry 'junit-platform-launcher'
    }

    dependencySet(group: 'org.mockito', version: '5.23.0') {
      entry 'mockito-core'
      entry 'mockito-junit-jupiter'
    }

    dependency group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'

    // due to Serenity 5.3.10 forcing commons-lang3@3.18.0
    dependency group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'

    // CVE-2026-34478
    // CVE-2026-34479
    // CVE-2026-34480
    // CVE-2026-34481
    // CVE-2026-34477
    // CVE-2025-68161 - from spring-boot-starter-logging@3.5.14
    dependencySet(group: 'org.apache.logging.log4j', version: '2.25.4') {
      entry 'log4j-to-slf4j'
      entry 'log4j-api'
    }

    // due to Serenity 5.3.10 forcing spring-context-support@6.2.10
    dependency group: 'org.springframework', name: 'spring-context-support', version: '6.2.18'

    // CVE-2020-13956 - transitive from service-auth-provider-java-client@5.3.3
    dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
  }
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-aop'
  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

  functionalTestImplementation 'org.springframework.boot:spring-boot-starter-test'

  functionalTestImplementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'
  functionalTestImplementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'
  functionalTestImplementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '5.2.0'
  functionalTestImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'

  functionalTestImplementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'

  functionalTestImplementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.17.18'

  functionalTestImplementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'

  functionalTestImplementation 'net.serenity-bdd:serenity-rest-assured'
  functionalTestImplementation 'net.serenity-bdd:serenity-spring'

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath
}

application {
  mainClass = 'uk.gov.hmcts.reform.wapostdeploymentfttests.Application'
}

bootJar {
  getArchiveFileName().set(provider {
    'ia-wa-post-deployment-ft-tests.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}
